[package]
name = "cuticula"
description = "Data Preprocessing library for Machine Learning"
authors = ["Michael Hirn <mj@autumnai.com>"]
version = "0.1.4"
repository = "https://github.com/autumnai/cuticula"
homepage = "https://github.com/autumnai/cuticula"
documentation = "http://autumnai.github.io/cuticula"
readme = "README.md"
keywords = ["preprocessing", "data-preprocessing", "transformation", "encoding",
"machine-learning"]
license = "MIT"

[dependencies]
collenchyma = { version = "0.0.6", default-features = false }

image = "0.4.0"
murmurhash3 = "0.0.5"
modifier = "0.1"

clippy = { version = "0.0.27", optional = true }

[features]
default = ["native", "cuda", "opencl"]
native = ["collenchyma/native"]
cuda = ["collenchyma/cuda"]
opencl = ["collenchyma/opencl"]

dev = []
unstable = [] # for travis-cargo
travis = ["native"]
lint = ["clippy"]
